# FileCryptX

./: CMakeLists.txt  README.md  main.cc  mainwindow.cc  mainwindow.h  mainwindow.ui  ui_mainwindow.h
